Custom hotkey "Set Object Mode" - "Object Mode" doesn't work properly #36308

Closed
opened 2013-07-29 05:43:49 +02:00 by no name · 4 comments

%%%Sorry for confusing title.

- Operating System, Graphics card ---

Windows 7

- Steps for others to reproduce the error  ---

Open User Prefs, Input tab
Go to 3d View, Object non-modal
Add new, "object.mode_set", Mode: Object Mode. Set to unused key. (Toggle off or on, broken either way.)
Test by pressing the assigned key in 3d view

If I'm understanding correctly how this is supposed to work, if the toggle checkbox is off this should set the view to object mode. Instead it does nothing. If the toggle checkbox is on, it should toggle between object mode and the next most recent mode. Instead it toggles between the 2 most recent modes even if neither is object mode.%%%

%%%Sorry for confusing title. - Operating System, Graphics card --- Windows 7 - Steps for others to reproduce the error --- Open User Prefs, Input tab Go to 3d View, Object non-modal Add new, "object.mode_set", Mode: Object Mode. Set to unused key. (Toggle off or on, broken either way.) Test by pressing the assigned key in 3d view If I'm understanding correctly how this is supposed to work, if the toggle checkbox is off this should set the view to object mode. Instead it does nothing. If the toggle checkbox is on, it should toggle between object mode and the next most recent mode. Instead it toggles between the 2 most recent modes even if neither is object mode.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Just figured out that if I create it with toggle off it acts like I said it does when it's on. If I turn it on then off again it no longer does anything.%%%

%%%Just figured out that if I create it with toggle off it acts like I said it does when it's on. If I turn it on then off again it no longer does anything.%%%

%%%Fixed in r59530, thanks for the report.%%%

%%%Fixed in r59530, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36308
No description provided.